--- a/my-react-app/moz-todo-react/src/index.css
+++ b/my-react-app/moz-todo-react/src/index.css
@@ -224,13 +224,14 @@ body {
 .todo-text:focus-visible {
   box-shadow: inset 0 0 0 2px;
 }
+
 /* End todo item styles */
 /* Checkbox styles */
 .c-cb {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   clear: left;
-  display: block;
+  display: inherit;
   font-family: Arial, sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
